# celery-issues

./: README.md  docker-compose.yml  pyproject.toml  worker.sh
celery_issues/: call_pyamqp.py  celery.py  client.py  pyamqp_worker.py
