[tool.poetry]
name = "celery-issues"
version = "0.1.0"
description = "Celery issues"
authors = ["Povilas Balciunas <balciunas90@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
celery = "4.4.7"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
